--- a/src/components/About/About.styles.css
+++ b/src/components/About/About.styles.css
@@ -1,8 +1,7 @@
 #about-section {
-  
     width: 100%;
     height: 550px;
-    padding: 50px 0; /* Adjusted padding for better spacing */
+    padding: 50px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
