--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,5 @@ body{
     font-weight: 300;
     margin: 0;
     padding: 0;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    border-box: box-sizing;
 }
