--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&display=swap');
 .menu-icon {
     display: none;
     cursor: pointer;
@@ -71,9 +72,10 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     font-size: 1.1rem;
-    font-family: 'Pixel', sans-serif;
+    font-family:"Noto Sans",  sans-serif;
     font-weight: bold;
-    margin-top: -0.5rem;
+    color: #666c72;
+    margin-top: -0.2rem;
     z-index: 1;
 }
 logo-img{
@@ -98,7 +100,7 @@ img{
     }
     .college-name{
         font-size: 0.5rem;
-        padding-left: 25px;
+        padding-left: 23px;
         margin-top: 0.02rem;
     } 
     nav {
