--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -3,7 +3,7 @@
     display: none;
     cursor: pointer;
     color: #2c3e50;
-    background-color: ;
+    /* background-color: ; */
     border-radius: 4px;
     margin-right: 10px;
     padding: 0px 20px;
@@ -67,22 +67,20 @@ nav a:hover {
     color: grey;
 }
 .college-name{
-    padding-left: 66px;
+    padding-left: 56px;
     width:max-content;
     align-items: center;
     justify-content: center;
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     font-family:"Noto Sans",  sans-serif;
     font-weight: bold;
     color: #666c72;
     margin-top: -0.2rem;
     z-index: 1;
 }
-logo-img{
-}
 
 img{
-    height:30px;
+    height:25px;
 }
 
 
@@ -95,12 +93,12 @@ img{
     img  {
         display: flex;
         flex-direction: row;
-        height: 10px;
+        height: 15px;
     
     }
     .college-name{
-        font-size: 0.5rem;
-        padding-left: 23px;
+        font-size: 0.7rem;
+        padding-left: 34px;
         margin-top: 0.02rem;
     } 
     nav {
