--- a/src/components/Contact Us/ContactUs.styles.css
+++ b/src/components/Contact Us/ContactUs.styles.css
@@ -2,10 +2,9 @@
     width: 100%;
     height:550px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-
     background-color: darkblue;
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
@@ -14,37 +13,80 @@
 div#contact-us-section h1{
     font-size: 3rem;
     margin-bottom: 2rem;
+    
 }
+.contact-us-header{
+    width: max-content;
+    font-size: 1.5rem;
+    margin-left: 25rem;
+}
+.divider{
+    width: 10px;
+    height: 100%;
+    height: 30rem;
+    background-color: #fff;
+    margin-left:9rem;
+    border-radius: 10px;
   
-  form {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-  }
+
+}
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin-left: auto;
   
-  label {
-    margin-bottom: 8px;
-  }
-  
-  input,
-  textarea {
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    width: 100%;
-  }
-  
-  input[type="submit"] {
-    background-color: #4caf50;
-    color: white;
-    cursor: pointer;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #45a049;
-  }
+}
+
+label {
+  margin-bottom: 8px;
+}
+
+/* Arrange Name and Email in a row */
+label[for="user_name"],
+label[for="user_email"] {
+  display: inline-block;
+  width: 25%;
+}
+
+/* Subject and Message fields */
+label[for="subject"],
+label[for="message"] {
+  width: 100%;
+}
+
+input,
+textarea {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;;
+  resize: vertical;
+}
+input[type="text"],
+input[type="email"] {
+  width: 20%;
+  position: relative;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
