--- a/src/components/Contact Us/ContactUs.styles.css
+++ b/src/components/Contact Us/ContactUs.styles.css
@@ -1,49 +1,61 @@
 #contact-us-section{
     width: 100%;
-    height:550px;
+    height:max-content;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: darkblue;
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
+    padding: 2rem 2rem;
     color: #fff;
+    background-attachment: fixed;
+    background-image: url("src/assets/snazzy-image.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 2rem 0;
+    z-index: 200;
 }
-div#contact-us-section h1{
-    font-size: 3rem;
-    margin-bottom: 2rem;
-    
+.contact-us-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 600px;
+    border-radius: 16px;
+    background: rgba(255, 255, 255, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(19.8px);
+    -webkit-backdrop-filter: blur(19.8px);
+    border-radius: 1.5rem;
+    padding: 1rem 2rem; 
 }
 .contact-us-header{
-    width: max-content;
-    font-size: 1.5rem;
-    margin-left: 25rem;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
-.divider{
-    width: 10px;
-    height: 100%;
-    height: 30rem;
-    background-color: #fff;
-    margin-left:9rem;
-    border-radius: 10px;
-  
 
-}
-h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
 
 form {
   display: flex;
   flex-direction: column;
   margin-top: 1em;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  margin-left: auto;
-  
+  height: 100%;
+  width: 90%;
+  padding: 1rem;
+  opacity: 0.8;
+  border-radius: 10px;
 }
 
 label {
@@ -54,39 +66,95 @@ label {
 label[for="user_name"],
 label[for="user_email"] {
   display: inline-block;
-  width: 25%;
+  width: 50%;
 }
 
 /* Subject and Message fields */
 label[for="subject"],
 label[for="message"] {
-  width: 100%;
+  width: 10%;
 }
 
 input,
 textarea {
-  padding: 10px;
+  padding:  10px 0 0 0 0;
+  height: 2rem;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;;
-  resize: vertical;
+  margin-left: 0rem;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #fff;
+  color: #fff;
+  text-align: left;
 }
 input[type="text"],
 input[type="email"] {
-  width: 20%;
+  width: 100%;
   position: relative;
+  border-bottom: 2px solid #fff;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0;
+  background-color: transparent;
 }
 
 input[type="submit"] {
-  background-color: #4caf50;
+  background-color: blue;
   color: white;
   cursor: pointer;
-  padding: 10px 15px;
+  padding:1rem 2rem 2rem 1rem;
+  border-radius: 4rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
   border: none;
-  border-radius: 4px;
+  margin-top: 2rem;
+
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #fff;
+  color: #000;
+}
+
+@media screen and (max-width: 768px) {
+  .contact-us-section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background-color: #fff;
+    width:100%;
+    padding: 0;
+    margin: 0;
+  }
+  .contact-us-container {
+    width: 30rem;
+    height: 70%;
+    padding: 1rem 2rem;
+  }
+  form {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+  label[for="user_name"],
+  label[for="user_email"] {
+    width: 100%;
+  }
+  label[for="subject"],
+  label[for="message"] {
+    width: 100%;
+  }
+  input[type="text"],
+  input[type="email"] {
+    width: 100%;
+  }
+  input[type="submit"] {
+    width: 100%;
+  }
 }
