contact us  function working reset form added toastify ui

--- a/src/components/Contact Us/ContactUs.styles.css
+++ b/src/components/Contact Us/ContactUs.styles.css
@@ -10,11 +10,12 @@
     padding: 2rem 2rem;
     color: #fff;
     background-attachment: fixed;
-    background-image: url("src/assets/snazzy-image.png");
+    background-color: #000;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url("src/assets/snazzy-image.png");
+    background-color: #000;
     background-size: cover;
     background-repeat: no-repeat;
     padding: 2rem 0;
-    z-index: 200;
 }
 .contact-us-container{
     display: flex;
@@ -24,11 +25,11 @@
     height: 100%;
     width: 600px;
     border-radius: 16px;
-    background: rgba(255, 255, 255, 0);
+    background: rgba(255, 255, 255, 0.0);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(19.8px);
-    -webkit-backdrop-filter: blur(19.8px);
+    backdrop-filter: blur(20.8px);
+    -webkit-backdrop-filter: blur(20.8px);
     border-radius: 1.5rem;
     padding: 1rem 2rem; 
 }
@@ -98,7 +99,16 @@ input[type="email"] {
   border-radius: 0;
   background-color: transparent;
 }
-
+textarea {
+  width: 100%;
+  position: relative;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-top: 1rem;
+  height: 1.3rem;
+  background-color: transparent;
+  resize: none;
+}
 input[type="submit"] {
   background-color: blue;
   color: white;
