--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
 
-    background-color: #fbcc43;
+    background-color: rgb(253, 184, 51);
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     color: #333;
