--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -70,10 +70,7 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(20.8px);
     -webkit-backdrop-filter: blur(20.8px);
-    
-
-  }
-  
+  }  
   .carousel-item {
     min-width: 100%;
     height: 100%;
@@ -83,7 +80,7 @@
     justify-content: center;
     flex-direction: column;
     box-sizing: border-box;
-    padding: 0 10px; /* Add padding as needed */
+    padding: 0 10px;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
     display: flex;
@@ -147,7 +144,6 @@
     margin: 5px;
     display: inline-block;
   }
-  
   .expanded-details {
     position: absolute;
     top: 0;
@@ -160,8 +156,6 @@
     box-sizing: border-box;
     overflow-y: auto;
   }
-
-  /* Adjust the styles as needed */
 
 .modal-overlay {
     position: fixed;
@@ -218,7 +212,6 @@
     display: inline-block;
   }
   .close-button {
-
     top: 10px;
     right: 10px;
     cursor: pointer;
@@ -231,8 +224,7 @@
     position: absolute;
     z-index: 6;
   }
-  
-  /* Additional styling for close button */
+
   .close-button:hover {
     color: red;
   }
@@ -274,6 +266,5 @@
   .modal {
     width: 100%;
     height: 80%;
-  }
- 
-  }
+  } 
+}
