--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -59,7 +59,15 @@
     margin-bottom: 0;
   
   }
-  
+  .description{
+    font: 500 16px/1.5em 'Poppins', sans-serif;
+    color: rgb(0,79,255);
+    text-align: center;
+    margin-top: 20px;
+    width: 100%;
+    word-wrap: break-word;
+    margin-bottom: 20px;
+  } 
   .carousel {
     position:absolute;
     transition: transform 0.3s ease-in-out;
@@ -147,7 +155,7 @@
     border-radius: 5px;
     padding: 5px;
     margin: 5px;
-    display: inline-block;
+    position: relative;
   }
   .registerlink{
     font: 500 16px/1.5em 'Poppins', sans-serif;
@@ -168,6 +176,14 @@
     padding: 20px;
     box-sizing: border-box;
     overflow-y: auto;
+  }
+  .event-typetime{
+    font: 500 16px/1.5em 'Poppins', sans-serif;
+    color: rgb(0,79,255);
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
 .modal-overlay {
@@ -278,10 +294,15 @@
   .expanded-details {
     width: 100%;
     height: 100%;
+    overflow-x:hidden;
   }
   .modal {
     width: 100%;
     height: 80%;
+  }
+  
+  .event-typetime{
+    display:block;
   } 
 }
 
