--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -59,6 +59,7 @@ div#team-section h1{
     background-color: #fff;
     box-shadow: 10px 10px  0 rgba(0,0,250,1);
     transition: all 0.5s ease-in-out;
+    cursor: pointer;
 }
 .team-member img{
     box-sizing: border-box;
