--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    cursor: not-allowed;
+    cursor: default;
     background-color: rgb(253, 184, 51);
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
@@ -29,7 +29,7 @@ div#team-section h1{
     flex-wrap: wrap;
     padding:0;
     margin:0;
-    cursor:not-allowed;
+    cursor:default;
 }
 
 .teamcarousel-item{
@@ -42,7 +42,7 @@ div#team-section h1{
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-in-out;
-    cursor: not-allowed;
+    cursor: default;
 }
 
 .team-member{
@@ -108,7 +108,7 @@ div#team-section h1{
         justify-content: center;
         text-align: center; 
         transition: all 0.5s ease-in-out;
-        cursor: pointer;
+        cursor: default;
     }
     .team-member{
         width: 70%;
