--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -3,20 +3,36 @@
     display: none;
     cursor: pointer;
     color: #2c3e50;
-    /* background-color: ; */
     border-radius: 4px;
     margin-right: 10px;
     padding: 0px 20px;
     height: 40px; 
-    border: 1px solid black;
     font-size: 1.5rem;
-   transition: color 0.3s;
+    transition: color 0.3s;
 }
 
 .menu-icon:hover {
-    color: white;
-    background-color: black;
+    color: #bdc3c7; 
 }
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #2c3e50;
+    margin: 6px 0;
+    transition: 0.4s;
+    border-radius: 4px;
+  }
+  
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
+  }
 
 nav { 
     display: flex;
@@ -82,7 +98,6 @@ nav a:hover {
 img{
     height:25px;
 }
-
 
 @media only screen and (max-width: 768px)
 {  
