--- a/src/components/Footer/Footer.styles.css
+++ b/src/components/Footer/Footer.styles.css
@@ -1,17 +1,128 @@
 #footer-section{
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: center;
+    
+    justify-content: space-between;
+    margin:0;
+    padding: 0;
+    padding-top: 40px;
+    height: 200px;
+    background:linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5));
+    backdrop-filter: blur(10px);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 20px;
     width: 100%;
-    height:550px;
+    height: min-content;
+    border:none;
+    padding-bottom: 50px;
+
+}
+.information{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 10px;
+    padding: 0 50px;
+    width: 50%;
 
-    background-color:violet;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.5rem;
-    color: #333;
+    
+    
 }
-div#footer-section h1{
-    font-size: 3rem;
-    margin-bottom: 2rem;
+.information div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+    padding: 0 10px;
+    width: 100%;
+    text-align: left;
+    word-wrap: break-word;
+}
+.social-media{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 0 10px;
+    padding-right: 20px;
+    background-color: rgba(0, 0, 0, 0.0);
+    width: 50%;
+}
+.social-media-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+    padding: 0 10px;
+    gap: 20px;
+
+}
+
+
+@media screen and (max-width: 768px){
+    #footer-section{
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    
+    }
+    .information{
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 10px;
+        padding: 0 50px;
+        
+    
+        
+        
+    }
+
+    .information div{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 10px;
+        padding: 0 20px;
+        width: 100%;
+        font-size: 15px;
+        padding-bottom: 10px;
+        text-align: center;
+        word-wrap: break-;
+
+    }
+    .social-media{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 20px;
+        text-align: center;
+    }
+    .social-media h2{
+        text-align: center;
+        padding-left: 20px;
+    }
+    .social-media-icon img{
+        height: 30px;
+        width: 30px;
+        align-items: center;
+        justify-content: center;
+        padding-left: 20px;
+
+    }
 }
