--- a/src/components/About/About.left.styles.css
+++ b/src/components/About/About.left.styles.css
@@ -1,143 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-.about-section {
-  margin-top: 60px;
-  padding: 0;
-  /* color: aliceblue; */
-  height: 92vh;
-  background-color: #fff;
-  display: flex;
-  position: relative;
-  box-sizing: 0;
-  font-family: "Poppins", sans-serif;
-}
-
 .left-section {
-  /* border: 2px solid black; */
-  /* background-image: url("../../assets/community.png"); */
   margin-top: 35px;
   width: 65%;
-  background-repeat: no-repeat;
-  /* padding-right: 60%; */
-  /* padding-left: 50px; */
-  /* border: 2px solid black; */
-}
-
-.right-section {
-  position: relative;
-  /* left: 0%; */
-  margin-top: 10%;
-  margin-left: 3rem;
-}
-
-.right-section img {
-  justify-content: center;
-  text-align: center;
-  /* margin-top: 14rem; */
-  height: 3rem;
-  padding: 0;
-}
-
-.gdsc-content {
-  text-align: center;
-}
-
-.gdsc-label {
-  line-height: 0;
-}
-
-.gdsc-content h4 {
-  font-size: 20px;
-  font-weight: 400;
-  letter-spacing: 0.5px;
-}
-
-.gdsc-content p {
-  font-size: 12px;
-  font-weight: 300;
-  letter-spacing: 0.5px;
-}
-
-.dev-slogan {
-  margin-top: 4rem;
-  font-size: 1rem;
-  line-height: 31px;
-}
-
-.join-gdsc {
-  margin-top: 3rem;
-  font-size: 17px;
-  font-weight: 600;
-  word-spacing: 1px;
-}
-
-.join-gdsc span {
-  color: red;
-}
-
-button {
-  margin-top: 15px;
-  padding: 13px 20px;
-  background-color: #1a73e8;
-  border: none;
-  border-radius: 5px;
-  color: #fff;
-  font-family: "Poppins", sans-serif;
-}
-
-.four-eclipes {
-  /* Ellipse 2 */
-
-  position: absolute;
-  width: 113px;
-  height: 113px;
-  left: 221.77px;
-  top: 368.01px;
-  background: linear-gradient(0deg, #ff0000, #ff0000), #ff0000;
-  transform: rotate(-179.61deg);
-
-  /* Ellipse 27 */
-
-  position: absolute;
-  width: 113px;
-  height: 113px;
-  left: 223px;
-  top: 255px;
-
-  background: #00b21c;
-
-  /* Ellipse 28 */
-
-  position: absolute;
-  width: 113px;
-  height: 113px;
-  left: 109px;
-  top: 345px;
-
-  background: #0083fb;
-
-  /* Ellipse 29 */
-
-  position: absolute;
-  width: 113px;
-  height: 113px;
-  left: 229px;
-  top: 345px;
-
-  background: #ffd602;
-}
-
-.first {
-  width: 500px;
-  height: 450px;
-}
-
-.Second {
-  height: 400px;
-}
-
-.cross {
-  position: relative;
 }
 
 /* CROSS */
@@ -151,7 +14,7 @@ button {
   position: absolute;
   width: 25px;
   height: 80px;
-  left: 2rem; /* Adjust the left value if needed */
+  left: 2rem;
   top: 8rem;
   background: #ffb800;
   border-radius: 40px;
@@ -180,15 +43,13 @@ button {
   width: 70px;
   height: 140px;
   left: 319.9px;
-  top: 33px;
+  top: 3.3rem;
   background: #bbf99e;
-  /* border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%; */
 }
 
 .rectangle-strip-bottom {
   position: absolute;
-  top: 10.8rem;
+  top: 12rem;
   left: 20rem;
   width: 69.6px;
   height: 35px;
@@ -210,8 +71,8 @@ button {
   border: 16px solid #b0fdc6;
   border-radius: 50%;
 }
+/* CIRCLE END*/
 
-/* four-eclipes */
 .half-circle-container {
   position: relative;
   top: 5rem;
@@ -225,7 +86,6 @@ button {
   width: 70px;
   height: 35px;
   border-radius: 100px 100px 0 0;
-  background-color: #3498db; /* Replace with your desired background color */
   overflow: hidden;
 }
 
@@ -299,7 +159,7 @@ button {
   width: 130px;
   height: 130px;
   left: 45rem;
-  top: 36rem;
+  top: 40rem;
   border-radius: 50%;
   background: #00a3ff;
   border: 50px solid #92d7fe;
@@ -311,9 +171,9 @@ button {
 .right-strip {
   position: absolute;
   width: 80px;
-  height: 150px;
+  height: 20rem;
   left: 1rem;
-  top: 30.9rem;
+  top: 35.9rem;
   border-radius: 80px 80px 0 0;
   background: #50e42b;
   border: 40px solid #cbffc9;
@@ -323,9 +183,9 @@ button {
 .left-strip {
   position: absolute;
   width: 80px;
-  height: 150px;
+  height: 20rem;
   left: 9.5rem;
-  top: 36.3rem;
+  top: 42.3rem;
   border-radius: 80px 80px 0 0;
   background: #fcb54c;
 }
@@ -343,7 +203,6 @@ button {
   height: 65px;
   left: 25rem;
   top: 27rem;
-
   background: #ffb800;
   border-radius: 40px;
 }
@@ -354,7 +213,6 @@ button {
   height: 65px;
   left: 25rem;
   top: 27rem;
-
   background: #ffb800;
   border-radius: 40px;
   transform: matrix(0.01, 1, -1, 0.01, 0, 0);
@@ -433,10 +291,6 @@ button {
   transform: rotate(90deg);
 }
 
-.first-line {
-  /* position: relative; */
-}
-
 .first-dot {
   position: absolute;
   width: 8px;
@@ -492,34 +346,8 @@ button {
   top: 1.5rem;
 }
 
-@media screen and (max-width: 850px) {
-  .about-section {
-    max-width: 100%;
-    height: 85vh;
-    /* display: flex; */
-    box-sizing: border-box; /* Fix the typo here */
-    flex-direction: column;
-    position: relative;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    /* Remove 'foxit' if it's not part of your styling */
-  }
-
-  .right-section {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    margin: 0 auto;
-    top: 10%;
-    /* padding: 2rem 2rem; */
-  }
-
-  .right-section img {
-    margin: auto;
-  }
-
+@media screen and (max-width: 1040px) {
   .bottom-circles {
-    /* margin: 10px; */
     position: relative;
     top: -25rem;
     right: 25rem;
@@ -527,8 +355,7 @@ button {
 
   .cross {
     left: 1rem;
-    top: -7rem;
-    /* display: none; */
+    top: -3.5rem;
   }
 
   .reactangle-strip {
@@ -544,12 +371,11 @@ button {
 
   .rectangle-strip-bottom {
     width: 3rem;
-    height: 1.5rem;
+    height: 4rem;
     top: 8rem;
   }
 
   .bottom-circles {
-    /* display: none; */
     top: 1rem;
     left: -27rem;
   }
@@ -572,7 +398,6 @@ button {
   }
 
   .two-bottom-strip {
-    /* display: none; */
     position: relative;
   }
 
@@ -587,11 +412,11 @@ button {
   .left-strip {
     width: 62px;
     left: 8rem;
-    top: 44rem;
+    top: 48rem;
   }
 
   .circles {
-    top: 32rem;
+    top: 35rem;
     left: 1rem;
     width: 20px;
     height: 20px;
@@ -610,8 +435,8 @@ button {
 
   .middle-cross {
     width: 15px;
-    left: -5rem;
-    top: 2rem;
+    left: -6rem;
+    top: 6rem;
     display: flex;
   }
 
