--- a/src/components/About/About.right.styles.css
+++ b/src/components/About/About.right.styles.css
@@ -79,7 +79,12 @@ button {
   font-size: 15px;
 }
 
-@media screen and (max-width: 1040px) {
+button:hover {
+  background-color: #000;
+  transition: 0.3s;
+}
+
+@media screen and (max-width: 1300px) {
   .about-section {
     max-width: 100%;
     height: 100vh;
