--- a/src/components/About/About.right.styles.css
+++ b/src/components/About/About.right.styles.css
@@ -68,7 +68,7 @@
 }
 
 button {
-  margin-top: 15px;
+    margin-top: 20px;
   padding: 12px 18px;
   background-color: #1a73e8;
   border: none;
@@ -76,7 +76,9 @@ button {
   color: #fff;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0.5px;
 }
 
 button:hover {
