--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -202,7 +202,7 @@
     margin-top:10vh;
     padding: 20px;
     box-sizing: border-box;
-    width: 50vw;
+    width: 50%;
     height:700px;
     overflow-y: auto;
     position:absolute;
